fix: css changes to prevent overflow on login page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -558,7 +558,6 @@ svg {
   width: 100vw;
   height: 100vh;
   font-size: 20px;
-  gap: 10px;
   background-color: white;
   color: black;
 }
@@ -577,9 +576,9 @@ svg {
   align-items: center;
   padding-bottom: 10px;
 }
-.signup,
-.form {
-  gap: 5px;
+.signup .form,
+.signup .login {
+  gap: 7px;
 }
 
 .bigavatar {
